--- a/WIRECLOUD/WIDGETS & OPERATORS/GraphNvd3/css/styles.css
+++ b/WIRECLOUD/WIDGETS & OPERATORS/GraphNvd3/css/styles.css
@@ -1,21 +1,8 @@
-.red{
-	background-color:#FF0000;
+.chart {
+	min-height: 150px;
+	border: 2px solid #999999;
+	margin: 5px;
 }
-.blue{
-	background-color:#00FF00;
-	min-height: 10%;
-}
-.graph {
-	max-width: 25%;
-	min-height:300px;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #e6e6e6;
-	background-color:#d9d9d9;
-	margin:0.3%;
-	padding:0.2%;
-}
-
 /**************************
  *  TABLETA
  */
