--- a/WIRECLOUD/WIDGETS & OPERATORS/GaugeChart/css/styles.css
+++ b/WIRECLOUD/WIDGETS & OPERATORS/GaugeChart/css/styles.css
@@ -17,6 +17,11 @@
 	}
 }
 
-/**************************
- *  TELEFONO
- */
+#msg p{
+	font-size: 1em;
+	color: red;
+	line-height: 1.2;
+}
+#msg p span{
+	color: blue;
+}
